# MiniRenderer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  geometry.h  he_Model.h  he_model.cpp  main.cpp  model.cpp  model.h  output.tga  shader.h  tgaimage.cpp  tgaimage.h  tinyrenderer.code-workspace  uv_shader.cpp
include/glad/: glad.h
results/: complete_diablo.tga  flat_diablo.tga  flat_head.tga  smooth_diablo.tga  smooth_head.tga  texture_diablo.tga  texture_normal_diablo.tga  texture_normal_shadowmap_diablo.tga  uv_diablo.tga  wireframe_diablo.tga  wireframe_head.tga
scripts/: build.sh  run.sh
shaders/: diffuse_map_shader.cpp  flat_shader.cpp  shader.h  uv_shader.cpp
src/: engine.cpp  engine.h  geometry.h  he_Model.h  he_model.cpp  main.cpp  math.h  model.h  test_main.cpp  tgaimage.h
src/shaders/: depth_shader.cpp  diffuse_map_shader.cpp  empty_shader.cpp  flat_shader.cpp  gouraud_shader.cpp  normal_map_shader.cpp  shader.h  uv_shader.cpp
